// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findOrCreateAccount should not ensure identity if id already exists 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "test@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "test@lindorm.io",
        "otp": Object {
          "signature": null,
          "uri": null,
        },
        "password": Object {
          "signature": null,
          "updated": null,
        },
        "permission": "user",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_email_changed",
      "payload": Object {
        "identityId": "3cdca0ff-1167-4ef3-8217-3767333389bd",
      },
    },
  ],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_identityId": "3cdca0ff-1167-4ef3-8217-3767333389bd",
  "_otp": Object {
    "signature": null,
    "uri": null,
  },
  "_password": Object {
    "signature": null,
    "updated": null,
  },
  "_permission": "user",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 1,
}
`;

exports[`findOrCreateAccount should return an account 1`] = `
Account {
  "_created": 2020-01-01T07:00:00.000Z,
  "_email": "test@lindorm.io",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_created",
      "payload": Object {
        "created": 2020-01-01T07:00:00.000Z,
        "email": "test@lindorm.io",
        "otp": Object {
          "signature": null,
          "uri": null,
        },
        "password": Object {
          "signature": null,
          "updated": null,
        },
        "permission": "user",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "account_email_changed",
      "payload": Object {
        "identityId": "be3a62d1-24a0-401c-96dd-3aff95356811",
      },
    },
  ],
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_identityId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_otp": Object {
    "signature": null,
    "uri": null,
  },
  "_password": Object {
    "signature": null,
    "updated": null,
  },
  "_permission": "user",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 1,
}
`;
